Part selected from MCU option breakdown

--- a/InitialDocument.tex
+++ b/InitialDocument.tex
@@ -1,5 +1,6 @@
 \documentclass[12pt]{article}
 \usepackage{capt-of}
+\usepackage{colortbl}
 \usepackage{gensymb}
 \usepackage[top=1in,left=1.5in,right=1in]{geometry}
 \usepackage{graphicx}
