--- a/research/part-selection.tex
+++ b/research/part-selection.tex
@@ -37,7 +37,7 @@ TBD, DESCRIPTION NEEDED HERE.
 			{
 				| >{\raggedright\arraybackslash}X
 				| >{\raggedright\arraybackslash}X
-				| >{\raggedright\arraybackslash}X
+				| >{\raggedright\arraybackslash\columncolor[gray]{0.8}}X
 				| >{\raggedright\arraybackslash}X
 				| >{\raggedright\arraybackslash}X
 				| >{\raggedright\arraybackslash}X
