--- a/design-constraints/realistic-constraints.tex
+++ b/design-constraints/realistic-constraints.tex
@@ -1,4 +1,12 @@
 \subsection{Economic Constraints}
+Although different sponsorship options were explored as a source of
+funding for our product, ultimately our team has not received any
+sponsorship for this product. This process will be entirely
+self-funded and evenly divided between the four team members. As a
+result of this, component selection heavily considers unit cost as a
+factor. It follows that the parts selected for this endeavor will meet
+the minimum requirements, but may not have some of the "nice-to-have"
+features one may want from a specific component. 
 \subsection{Time Constraints}
 \subsection{Equipment Constraints}
 \subsection{Safety Constraints}
